# satellite-observer

./: .gitignore  CMakeLists.txt  README.md  default.ini
Resources/TLE/: boxscore  boxscore (copia)
Resources/conf/: default.ini
build2/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
build2/src/: Makefile  sat-observer
build2/src/orbitTools/core/: Makefile  cmake_install.cmake
build2/src/others/: Makefile
gr-sat_observer/: CMakeLists.txt
gr-sat_observer/cmake/Modules/: sat_observerConfig.cmake
gr-sat_observer/docs/: README.sat_observer
gr-sat_observer/docs/doxygen/: Doxyfile.in
gr-sat_observer/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-sat_observer/examples/: decoder.py
gr-sat_observer/grc/: CMakeLists.txt  sat_observer_noaa_analog_decoder_f.xml
gr-sat_observer/include/sat_observer/: CMakeLists.txt  api.h  noaa_analog_decoder_f.h
gr-sat_observer/lib/: CMakeLists.txt  decode.cpp  decode.h  dsp.cpp  noaa_analog_decoder_f_impl.cc  noaa_analog_decoder_f_impl.cc~  noaa_analog_decoder_f_impl.h  qa_sat_observer.cc  qa_sat_observer.h  test_sat_observer.cc  version.h
gr-sat_observer/python/: CMakeLists.txt  __init__.py
gr-sat_observer/swig/: CMakeLists.txt  sat_observer_swig.i
install/: client  cookies.txt  default.ini  frequency (copia).py  frequency.py  sat-observer  server
src/: CMakeLists.txt  CMakeLists.txt~  client_main.cpp  main.cpp  sat-observer_main.cpp  server_main.cpp
src/orbitTools/core/: CMakeLists.txt  Makefile  cJulian.cpp  cNoradSDP4.cpp
src/others/: CMakeLists.txt  Satellite.cpp  Satellite.h  TLE_param.cpp  TLE_param.h  utilities.cpp  utilities.h
src/socket/: CMakeLists.txt  client_socket.cpp  client_socket.h  server_socket.cpp  server_socket.h  socket.cpp  socket.h
